replaced java serialization with json